--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   },
   "scripts": {},
   "dependencies": {
-    "faker": "^4.1.0"
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "faker": "^4.1.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "webpack": "^4.28.0"
   }
 }
