--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "webpack": "^4.28.0"
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.1.2"
   }
 }
