--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "engines": {
     "node": ">=6.13.0"
   },
-  "scripts": {},
+  "scripts": {
+    "react-dev": "webpack -d --watch"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -15,9 +17,14 @@
     "faker": "^4.1.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "sequelize": "^4.42.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.1.2"
