--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "react-dev": "webpack -d --watch"
+    "start": "nodemon server/index.js",
+    "react-dev": "webpack -d --watch",
+    "startDb": "mysql -u root -p < ./db/schema.sql",
+    "seedDb": "node ./db/index.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
