--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "lodash": "^4.17.11",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "react": "^16.7.0",
