--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "csv-write-stream": "^2.0.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "lodash": "^4.17.11",
+    "mongoose": "^5.4.3",
     "morgan": "^1.9.1",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "sequelize": "^4.42.0",
-    "underscore": "^1.9.1"
+    "shortid": "^2.2.14",
+    "underscore": "^1.9.1",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
