--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
+    "pretty-hrtime": "^1.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "sequelize": "^4.42.0",
