--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "license": "",
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "start2": "node ./db/data_generation/generateSeedData.js && node ./server/index.js",
     "start3": "node ./server/index.js",
     "react-dev": "webpack -d --watch",
@@ -23,12 +23,15 @@
     "faker": "^4.1.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.3",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.9.1",
+    "newrelic": "^5.1.0",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "pretty-hrtime": "^1.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "redis": "^2.8.0",
     "sequelize": "^4.42.0",
     "shortid": "^2.2.14",
     "underscore": "^1.9.1",
